# libmcs

./: .gitignore  .hgignore  AUTHORS  COPYING  Doxyfile  GIT-Access  Makefile  Mercurial-Access  README  TODO  autogen.sh  buildsys.mk.in  configure.ac  extra.mk.in  libmcs.pc.in
mk/: rules.mk.in
src/: Makefile
src/backends/: Makefile
src/backends/default/: Makefile  keyfile.c  keyfile.h
src/backends/gconf/: Makefile  gconf.c  gconf.h
src/backends/kconfig/: Makefile  kconfig.cc
src/libmcs/: Makefile  libmcs.def  mcs.h  mcs_backend_registration.c  mcs_backends.c  mcs_handle_factory.c  mcs_init.c  mcs_list.c  mcs_loader.c  mcs_loader_posix.c  mcs_loader_win32.c  mcs_logger.c  mcs_plugin_loader.c  mcs_util.c
src/tools/: Makefile
src/tools/mcs-getconfval/: Makefile  mcs_getconfval.c
src/tools/mcs-info/: Makefile  mcs_info.c
src/tools/mcs-query-backends/: Makefile  mcs_query_backends.c
src/tools/mcs-setconfval/: Makefile  mcs_setconfval.c
src/tools/mcs-walk-config/: Makefile  mcs_walk_config.c
